@@ -1,3 +1,8 @@
+2005-05-21  Pat Thoyts  <pat@zsplat.freeserve.co.uk>
+
+	* dns.tcl: Added support for ceptcl as well as tcludp for udp
+	support.
+
 2005-05-06  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* ip.tcl:   Added some support for acceping RFC3056 6to4 addresses
